k8s/base/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: backend-image

          imagePullPolicy: Always

          ports:
            - containerPort: 4000
