k8s/base/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: frontend-image

          imagePullPolicy: Always

          ports:
            - containerPort: 3000
